--- a/paper.tex
+++ b/paper.tex
@@ -21,14 +21,15 @@
 \\[.5cm]
 Cameron Smith$^{1}$,
 Raymond S. Puzio$^{1}$,
-Aviv Bergman$^{1,2,3,4}$,
+Aviv Bergman$^{1,2,3,4,*}$,
 \\[.5cm]
 $^1$Department of Systems and Computational Biology,\\
 $^2$Dominick P. Purpura Department of Neuroscience,\\
 $^3$Department of Pathology, Albert Einstein College of Medicine,\\
 1301 Morris Park Ave, Bronx, NY 10461, USA\\
 $^4$Santa Fe Institute, 1399 Hyde Park Road, Santa Fe, NM 87501, USA
-\\[.5cm]
+\\
+$*$to whom correspondence should be addressed: aviv@einstein.yu.edu\\[.5cm]
 % $\ast$To whom correspondence should be addressed; E-mail: aviv@einstein.yu.edu.
 \end{center}
 % \end{@twocolumnfalse}
